@@ -4,6 +4,7 @@ tasksel (1.43) UNRELEASED; urgency=low
   * Denis Barbier
     - Update tasks/po/fr.po
     - Add "cs es nl" to LANGS_DESC in Makefile
+    - Rename po/C.po into po/tasksel.pot
   * Konstantinos Margaritis
     - Update Greek translations.
 
